--- a/K8S/commands-depl.yaml
+++ b/K8S/commands-depl.yaml
@@ -1,31 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata: 
-  name: platforms-depl
+  name: commands-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: platformservices
+      app: commandsservices
   template:
     metadata:
       labels:
-        app: platformservices
+        app: commandsservices
     spec:
       containers:
-        - name: platformservices
-          image: igeg/platformservices:latest
+        - name: commandsservices
+          image: igeg/commandsservices:latest
 ---
 apiVersion: v1
 kind: Service
 metadata: 
-  name: platforms-clusterip-srv
+  name: commands-clusterip-srv
 spec:
   type: ClusterIP
   selector:
-    app: platformservices
+    app: commandsservices
   ports:
-  - name: platformservices
+  - name: commandsservices
     protocol: TCP
     port: 80
     targetPort: 80
